# RyzenMasterBindings

./: .gitignore  LICENSE  Readme.md  RyzenMasterBindings.sln
.github/workflows/: dotnet.yml
RyzenMasterBindings/: Bios.cs  CPUParameters.cs  CacheInfo.cs  Cpu.cs  Device.cs  DeviceManager.cs  DeviceType.cs  EffectiveFrequencyData.cs  OCMode.cs  Platform.cs  RyzenMasterBindings.csproj  RyzenMasterLibrary.cs  StatusCode.cs  sgkey.snk
RyzenMasterBindingsTester/: Program.cs  RyzenMasterBindingsTester.csproj
RyzenMasterWrapper/: CMakeLists.txt  library.cpp  library.h
